Integration of "Poisson Process" : "Distribution related to Poisson Process "

--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -68,7 +68,7 @@
 \addto\captionsenglish{\renewcommand*\abstractname{Sommario}} % change Abstract title
 %------------------------------ active url
 \usepackage{url}
-\usepackage{svg}
+%\usepackage{svg}
 \usepackage{ifluatex}
 \renewcommand{\UrlFont}{\color{black}\small\ttfamily}
 
@@ -115,7 +115,7 @@
 \includegraphics[width=9cm]{Zorzilla}\\
 \vspace{0.5cm}
 {written with love by\par}
-{\Large Ettore Mariotti, Andrea Pittaro, Enrico Lovisotto, Davide Peron, Umberto Martinelli, Federico Mason, Lorenza Prospero\par}
+{\Large Ettore Mariotti, Andrea Pittaro, Enrico Lovisotto, Davide Peron, Umberto Martinelli, Federico Mason, Lorenza Prospero, Ciprian Matteo\par}
 %\vspace{0.2cm} \linespread{1} \scshape{\large{\bfseries{(subtitle)}}}
 \end{center}
 
