--- a/network_modeling/chapter_PP.tex
+++ b/network_modeling/chapter_PP.tex
@@ -110,6 +110,103 @@ In general,
               \item $x_1$ inside $x_2$: I can apply the result I've just proved to $x_1$ first and then to the parts in $x_2$ that are not in $x_1$
               \item $x_1$ and $x_2$ overlapping just on one side: same as before, first apply the previous result to the overlapping part, then to the others
             \end{itemize}
+        
+        
+       
   \end{itemize}
+\section{Distribution related to Poisson Process}
+Defining: 
+\begin{itemize}
+	\item $X(t)$ as the number of arrivals up to time t;
+	\item $W_n$ the instant of $n_{th}$ arrival;
+	\item $S_n$= $W_{n+1}$-$W_n$ the inter-arrival time between $(n+1)_{th}$ and $n_{th}$ arrival;
+\end{itemize}
+
+
+	\begin{theorem}[5.4, 	\textbf{$W_n$$ \sim$ Gamma Distribution} ]
+		Being $W_{1}$,$W_{2}$,..$W_{n}$ the arrival time in a Poisson Process $N(t)$ with rate ${\lambda}>0$ the probability density function of $W_n$ is the following:
+		
+			\begin{equation}
+			f_{W_n} (t )=\frac{\lambda^n t^{n-1}} {(n-1)!}e^{-\lambda t} \\
+			\end{equation}
+	\end{theorem}
+
+\begin{theorem}[5.7, \textbf{Joint probability of [$W_{1}$,..$W_{n}$]} ]
+	Being $W_{1}$,$W_{2}$,..$W_{n}$ the arrival time in a Poisson Process $N(t)$ with rate ${\lambda}>0$. Given $N(t)=n$, the joint distribution of $w_{1}$,$w_{2}$,..$w_{n}$ variables is:
+	\begin{equation}
+	f_{W_1,W_2,..W_n|n} (w_1,w_2,..w_n) = P (W_1=w_1,...W_n=w_n|N(t)=n) = n!/t^n
+	\end{equation}
+	\begin{proof}
+		\begin{enumerate}
+			\item Excluding Simultaneous arrivals: \newline
+		$	P[N(t+h)-N(t)=0]= 1 - \lambda h+ o(h)$ \newline
+		$    P[N(t+h)-N(t)=1]= \lambda h+ o(h)$     \newline
+		$    P[N(t+h)-N(t)>=0]= o(h)$, negligible as h$\rightarrow$0  \newline
+		\item 
+	 The probability of the event $ \{w_i<W_i \leq w_i+\Delta w \}$ for $i=1,...,n$ and $N(t)=n$
+	  correspond to the following events: 
+	  \newline $E_1=$\{0 arrivals out of$\Delta$ $w_i$ intervals\}=$\{N((0,w_1])=0,...,N((w_n+\Delta w,t])=0 \} $ 
+	  \newline and
+	  \newline $E_2$=\{1 arrival in each of $\Delta$$w_i$ intervals\}=$\{N((w_1,w_1+\Delta w_1])=1,...,N((w_n,w_n+\Delta w])=1\}$ 
+	 \newline Compute the probability of these two disjoint events:
+	  \begin{equation}
+	  \begin{split}
+	  P[N((0,w_1])=0,...,N((w_n+\Delta w_n,t])=0] =\\
+	 = e^{-\lambda w_1} \cdot e^{-\lambda (w_2-(w_2+\Delta w_2))} ... \cdot e^{-\lambda (t-(w_n+\Delta w_n))}\\
+	  =e^{-\lambda t} (1+o(max\{\Delta w_i\}))
+	  \end{split}
+       \end{equation}
+       \newline
+       \begin{equation}
+      \begin{split}
+     	P[N((w_1,,w_1+\Delta w_1])=1,...,N((w_n,w_n+\Delta w])=1] =\\
+        = (\lambda \Delta w_1) \cdot ... \cdot(\lambda \Delta w_n) (1+o(max\{\Delta w_i\}))
+      \end{split}
+	  \end{equation}
+	  \item So the final probability is computed as the product of these two independent events:
+	  	\begin{equation}
+	  	\begin{split}
+	   f_{W_1,W_2,..W_n|n} (w_1,w_2,..w_n)\cdot( \Delta w_1\Delta w_2..\Delta w_n) = \\
+	  =P[E_1 \cap E_2 ]\\
+	  =P[w_i\leq W_i \leq w_i+\Delta w_i, i=1,2,..,n| \textnormal{n arrivals}]=\\
+	  =\frac{P[w_i\leq W_i \leq w_i+\Delta w_i, i=1,2,..,n,\textnormal{n arrivals}}{\textnormal{n arrivals}}\\
+	  =\frac{(\lambda \Delta w_1 e^{-\lambda w_1}\cdot..\lambda \Delta w_n e^{-\lambda w_n})e^{-\lambda t}}{\frac{(\lambda t)^{n}e^{-\lambda t}} {n!}}\\
+	  =\frac{ (\Delta w_1 \cdot \Delta w_2\cdot.. \Delta w_n) n!}{t^n}
+	  	\end{split}	  
+	  \end{equation}
+	  \item
+	  Dividing both members for ($\Delta w_1 \cdot \Delta w_2 \cdot .. \Delta w_n$) we obtain:
+	   \begin{equation}            
+         f_{W_1,W_2,..W_n|n} (w_1,w_2,..w_n) =n!/t^n
+	  \end{equation}
+	  (Fixing the value of t and n this is a uniform density function)
+		\end{enumerate}
+	\end{proof}
+\end{theorem}
+\begin{theorem}[5.5,\textbf{Exponential Inter-arrival} ]
+	The Inter-arrival times $S_0,S_1, S_{n-1}$ are independent r.v. with exponential density function: 
+	\begin{equation}
+	f_{S_k}(s)=\lambda e^{-\lambda s}, s \ge 0
+	\end{equation}
+
+\end{theorem}
+
+\begin{theorem}[5.6,\textbf{Conditioned Arrivals} ]
+  (Enunciate given in an intuitive but not so formal way)
+  \newline
+  Being $X(t)$ a Poisson Process with $\lambda>0$, $u$ and $t$ two temporal variables such that $0<u<t$, $n$ and $k$ two variables which describes the number of arrivals such that $0\leq k\leq n$ . The probability of the event  "up to instant $u$, $k$ arrivals have been occurred conditioned by the fact that $n$ arrivals occurs up to time $t$" is described by a binomial distribution with $n$ attempts and $u/t$ success probability.
+  Formally: 
+  
+  \begin{equation}            
+  P[X(u)=k|X(t)=n]= \frac{n!}{k!(n-k)!}(\frac{u}{t})^k(1-\frac{u}{t})^{n-k}
+  \end{equation}
+  \begin{proof}
+  	It is a direct consequence of Theorem 5.7.
+  	Being $X(t)=n$, the position of each arrival along interval $t$ can be modeled as i.i.d. uniform random variable. This corresponds to the realization of n experiments with  $p_{succ}=u/t$  thus the conditioned probability can be modeled as binomial $Bin(n,\frac{u}{t})$.  
+  \end{proof}
+	
+\end{theorem}
+
+
 
   
