Removed aperiodic assumption from theorem KT 4.2
See here for book reference: https://goo.gl/pmxDrH

--- a/network_modeling/chapter_2.tex
+++ b/network_modeling/chapter_2.tex
@@ -658,7 +658,7 @@ Let $\rho=\sum\limits_{k=0}^{+\infty} k \cdot a_k$. We say that for
 	\end{proof}
 
 	\begin{theorem}[4.2, KT p. 95 (sufficient condition for recurrence)]
-		An irreducible aperiodic \gls{mc}  is recurrent if:
+		An irreducible \gls{mc} is recurrent if:
 
 		\begin{equation}\noindent
 			\exists \text{ a sequence } Y_i :  \text{, for } i = 1, \dots \\
