--- a/network_modeling/chapter_2.tex
+++ b/network_modeling/chapter_2.tex
@@ -47,7 +47,7 @@ The transition probability matrix:
 	a_{0} & a_{1} & a_2 & \cdots  \\
 	0			& a_{0} & a_{1} & \cdots  \\
 	0 		& 0			& a_{0} & \cdots  \\
-	\vdots & \vdots & \ddots &  \\
+	\vdots & \vdots & \vdots & \ddots &  \\
 \end{pmatrix}
 \end{equation}
 \begin{definition}[Behavior of a MC]
@@ -253,7 +253,7 @@ Let $\rho=\sum\limits_{k=0}^{+\infty} k \cdot a_k$. We say that for
 
 	---
 
-	Following table summarize some properties for the types of state that can be found in a \gls{mc}.
+	The following table summarize some properties for the types of state that can be found in a \gls{mc}:
 
 	{\renewcommand{\arraystretch}{1.2}
 	\begin{center}
