--- a/network_modeling/chapter_PP.tex
+++ b/network_modeling/chapter_PP.tex
@@ -110,12 +110,12 @@ In general,
               \item $x_1$ inside $x_2$: I can apply the result I've just proved to $x_1$ first and then to the parts in $x_2$ that are not in $x_1$
               \item $x_1$ and $x_2$ overlapping just on one side: same as before, first apply the previous result to the overlapping part, then to the others
             \end{itemize}
-        
-        
-       
+
+
+
   \end{itemize}
 \section{Distribution related to Poisson Process}
-Defining: 
+Defining:
 \begin{itemize}
 	\item $X(t)$ as the number of arrivals up to time t;
 	\item $W_n$ the instant of $n_{th}$ arrival;
@@ -125,7 +125,7 @@ Defining:
 
 	\begin{theorem}[5.4, 	\textbf{$W_n$$ \sim$ Gamma Distribution} ]
 		Being $W_{1}$,$W_{2}$,..$W_{n}$ the arrival time in a Poisson Process $N(t)$ with rate ${\lambda}>0$ the probability density function of $W_n$ is the following:
-		
+
 			\begin{equation}
 			f_{W_n} (t )=\frac{\lambda^n t^{n-1}} {(n-1)!}e^{-\lambda t} \\
 			\end{equation}
@@ -142,12 +142,12 @@ Defining:
 		$	P[N(t+h)-N(t)=0]= 1 - \lambda h+ o(h)$ \newline
 		$    P[N(t+h)-N(t)=1]= \lambda h+ o(h)$     \newline
 		$    P[N(t+h)-N(t)>=0]= o(h)$, negligible as h$\rightarrow$0  \newline
-		\item 
+		\item
 	 The probability of the event $ \{w_i<W_i \leq w_i+\Delta w \}$ for $i=1,...,n$ and $N(t)=n$
-	  correspond to the following events: 
-	  \newline $E_1=$\{0 arrivals out of$\Delta$ $w_i$ intervals\}=$\{N((0,w_1])=0,...,N((w_n+\Delta w,t])=0 \} $ 
+	  correspond to the following events:
+	  \newline $E_1=$\{0 arrivals out of$\Delta$ $w_i$ intervals\}=$\{N((0,w_1])=0,...,N((w_n+\Delta w,t])=0 \} $
 	  \newline and
-	  \newline $E_2$=\{1 arrival in each of $\Delta$$w_i$ intervals\}=$\{N((w_1,w_1+\Delta w_1])=1,...,N((w_n,w_n+\Delta w])=1\}$ 
+	  \newline $E_2$=\{1 arrival in each of $\Delta$$w_i$ intervals\}=$\{N((w_1,w_1+\Delta w_1])=1,...,N((w_n,w_n+\Delta w])=1\}$
 	 \newline Compute the probability of these two disjoint events:
 	  \begin{equation}
 	  \begin{split}
@@ -172,11 +172,11 @@ Defining:
 	  =\frac{P[w_i\leq W_i \leq w_i+\Delta w_i, i=1,2,..,n,\textnormal{n arrivals}}{\textnormal{n arrivals}}\\
 	  =\frac{(\lambda \Delta w_1 e^{-\lambda w_1}\cdot..\lambda \Delta w_n e^{-\lambda w_n})e^{-\lambda t}}{\frac{(\lambda t)^{n}e^{-\lambda t}} {n!}}\\
 	  =\frac{ (\Delta w_1 \cdot \Delta w_2\cdot.. \Delta w_n) n!}{t^n}
-	  	\end{split}	  
+	  	\end{split}
 	  \end{equation}
 	  \item
 	  Dividing both members for ($\Delta w_1 \cdot \Delta w_2 \cdot .. \Delta w_n$) we obtain:
-	   \begin{equation}            
+	   \begin{equation}
          f_{W_1,W_2,..W_n|n} (w_1,w_2,..w_n) =n!/t^n
 	  \end{equation}
 	  (Fixing the value of t and n this is a uniform density function)
@@ -184,7 +184,7 @@ Defining:
 	\end{proof}
 \end{theorem}
 \begin{theorem}[5.5,\textbf{Exponential Inter-arrival} ]
-	The Inter-arrival times $S_0,S_1, S_{n-1}$ are independent r.v. with exponential density function: 
+	The Inter-arrival times $S_0,S_1, S_{n-1}$ are independent r.v. with exponential density function:
 	\begin{equation}
 	f_{S_k}(s)=\lambda e^{-\lambda s}, s \ge 0
 	\end{equation}
@@ -195,18 +195,63 @@ Defining:
   (Enunciate given in an intuitive but not so formal way)
   \newline
   Being $X(t)$ a Poisson Process with $\lambda>0$, $u$ and $t$ two temporal variables such that $0<u<t$, $n$ and $k$ two variables which describes the number of arrivals such that $0\leq k\leq n$ . The probability of the event  "up to instant $u$, $k$ arrivals have been occurred conditioned by the fact that $n$ arrivals occurs up to time $t$" is described by a binomial distribution with $n$ attempts and $u/t$ success probability.
-  Formally: 
-  
-  \begin{equation}            
+  Formally:
+
+  \begin{equation}
   P[X(u)=k|X(t)=n]= \frac{n!}{k!(n-k)!}(\frac{u}{t})^k(1-\frac{u}{t})^{n-k}
   \end{equation}
   \begin{proof}
   	It is a direct consequence of Theorem 5.7.
-  	Being $X(t)=n$, the position of each arrival along interval $t$ can be modeled as i.i.d. uniform random variable. This corresponds to the realization of n experiments with  $p_{succ}=u/t$  thus the conditioned probability can be modeled as binomial $Bin(n,\frac{u}{t})$.  
+  	Being $X(t)=n$, the position of each arrival along interval $t$ can be modeled as i.i.d. uniform random variable. This corresponds to the realization of n experiments with  $p_{succ}=u/t$  thus the conditioned probability can be modeled as binomial $Bin(n,\frac{u}{t})$.
   \end{proof}
-	
+
 \end{theorem}
 
+\section{M/G/$\infty$}
+$X(t)= \#$ of arrivals in $ [ 0, t ]$ \\
+$M(t)= \#$ of users in the system at time $t$ \\
+A user is still in the system at time t if $W_k + Y_k \geq t$. Therefore $M(t) = \sum\limits_{k=1}^{X(t)} \mathds{1}\{W_k + Y_k \geq t\} $.
+\begin{equation}
+  \begin{split}
+      P[M(t)=m|X(t)=n] &= P[\sum\limits_{k=1}^{X(t)} \mathds{1}\{W_k + Y_k \geq t\} = m|X(t)=n] \\
+      &= P[\sum\limits_{k=1}^{n} \mathds{1}\{U_k + Y_k \geq t\}] = {{n}\choose{m}}p^{m}(1-p)^{n-m}
+  \end{split}
+\end{equation}
+Where $p = P[U_k + Y_k \geq t]$, we have to compute this probability.\\
+\begin{equation}
+  \begin{split}
+    p = P[U_k + Y_k \geq t] &= \frac{1}{t}\int_0^t P[Y_k \geq t -u] \mathrm{d}u \\
+    &= \frac{1}{t}\int_0^t [1 - G(t-u)] \mathrm{d}u
+    &= \frac{1}{t}\int_0^t [1 - G(z)] \mathrm{d}z
+  \end{split}
+\end{equation}
+Now we can compute
+\begin{equation}
+  \begin{split}
+      P[M(t)=m] &= \sum\limits_{n=0}^{\infty} P[M(t)=m|X(t)=n]P[X(t)=n] \\
+      &= \sum\limits_{n=m}^{\infty} \frac{n!}{m!(n-m)!}p^m(1-p)^{n-m}\frac{e^{-\lambda t} (\lambda t)^n}{n!} \\
+      &= \frac{e^{-\lambda t} p^m (\lambda p t)^m}{m!}\sum\limits_{n=m}^{\infty} \frac{(1-p)^{n-m}(\lambda t)^{n-m}}{(n-m)!}\\
+      &= \frac{e^{\lambda p t}(\lambda p t)^m}{m!}
+  \end{split}
+\end{equation}
+Where $\lambda p t = E[M(t)] = \lambda t \frac{1}{t} \int_0^t [1 - G(z)] \mathrm{d}z = \lambda \int_0^t [1 - G(z)] \mathrm{d}z$. \\
+As $t \rightarrow \infty$: $\lambda \int_0^t [1 - G(z)] \mathrm{d}z = \lambda E[Y] (=p)$.
 
+%shot noise example? should we add it?
 
-  
+\section{BG 275: Slotted multi-access}
+Assumptions:
+\begin{itemize}
+  \item[1.] Slotted system: constant packet duration, synchronized users
+  \item[2.] Poisson arrivals: with \textbf{total} arrival rate $\lambda$
+  \item[3.] Collision or perfect reception
+  \item[4.] Immediate $ \{ 0,1, e\}$ feedback
+  \item[5.] Retransmission until success (backlogged)
+  \item[6a.] No buffering $\rightarrow$ upper bound to the performance of a realistic system
+  \item[6b] Infinite set of nodes $\rightarrow$ lower bound
+\end{itemize}
+\subsection{ALOHA}
+Slot time = 1\\
+G = average $\#$ of attempts per slot\\
+S = average $\#$ of successes per slot \\
+$\lambda$ = average rate of arrivals (new packet per slot)
