--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -68,6 +68,27 @@
 \def\eal{\end{align}}
 \def\prob{\ensuremath\mathbb{P}}
 \def\exp{\ensuremath\mathbb{E}}
+\newcommand{\Hb}{\mathbb{H}}
+\newcommand{\Sb}{\mathbb{\Sigma}}
+\newcommand{\U}{\mathbb{U}}
+\newcommand{\F}{\mathbb{F}}
+\newcommand{\V}{\mathbb{V}}
+\newcommand{\A}{\mathbb{A}}
+\newcommand{\B}{\mathbb{B}}
+\newcommand{\C}{\mathbb{C}}
+\newcommand{\E}{\mathbb{E}}
+\newcommand{\I}{\mathbb{I}}
+\newcommand{\Y}{\mathbb{Y}}
+\newcommand{\N}{\mathbb{N}}
+\newcommand{\W}{\mathbb{W}}
+\newcommand{\Z}{\mathbb{Z}}
+\newcommand{\R}{\mathbb{R}}
+\newcommand{\X}{\mathbb{X}}
+\newcommand{\Pb}{\mathbb{P}}
+\newcommand{\Q}{\mathbb{Q}}
+\newcommand{\D}{\mathbb{D}}
+\newcommand{\Rm}{\mathbb{R^{-1}}}
+\newcommand{\J}{\mathbb{J}}
 
 \newcommand{\Fig}[1]{Fig.~\ref{#1}}
 \newcommand{\eq}[1]{(\ref{#1})}
